# cyber-creepers

./: .env  PROJECT_DEEP_DIVE.md  README.md  test_llm_provider.py
data/: approved_reports.json
frontend/: .env.local.example  SUPABASE_QUICKSTART.md  SUPABASE_SETUP.sql  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.jsx  index.css
rohith/: .dockerignore  .env.example  .gitignore  api.py  app.py  load_salesforce_clients.py  pytest.ini  requirements.txt
rohith/.agent/skills/finrobot-core/: SKILL.md
rohith/.agent/skills/langchain-salesforce/: SKILL.md
rohith/.agent/skills/langchain-salesforce/references/: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
rohith/.agent/skills/langchain-salesforce/references/.github/: CODEOWNERS  SETUP.md
rohith/.agent/skills/langchain-salesforce/references/.github/workflows/: ci.yml  pr-checks.yml  pr-comments.yml  release.yml
rohith/.agent/skills/langchain-salesforce/references/docs/: salesforce.ipynb
rohith/.agent/skills/langchain-salesforce/references/langchain_salesforce/: __init__.py  tools.py
rohith/.agent/skills/langchain-salesforce/references/tests/integration_tests/: test_tools.py
rohith/.agent/skills/langchain-salesforce/references/tests/unit_tests/: test_init.py  test_tools.py
rohith/.agent/skills/openbb-mcp/: SKILL.md  start_openbb_mcp.ps1
rohith/.agent/skills/openbb-mcp/references/: .codespell.skip  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CODE_OF_CONDUCT.md  SECURITY.md
rohith/.agent/skills/trading-agents/: SKILL.md
rohith/.github/workflows/: deploy.yml
rohith/data/: approved_reports.json
rohith/frontend/: index.html  package-lock.json  package.json
rohith/frontend/src/: App.css  App.tsx  index.css  types.ts
rohith/src/comparison/: client_comparator.py
rohith/src/orchestration/: __init__.py  state.py  supervisor_graph.py
rohith/src/orchestration/nodes/: __init__.py  analyze_risk.py  compile_master_report.py  fetch_crm.py  fetch_market.py  goal_planner.py  persona_ensemble.py  persona_ensemble_backup.py  profile_client.py  save_draft.py  summarize_fundamentals.py  summarize_macro.py  summarize_news.py
rohith/src/utils/: batch_processor.py  cache.py  compliance.py  error_handler.py  feedback_db.py  llm_provider.py  logging.py  pdf_generator.py  smart_cache.py
rohith/tests/: conftest.py  test_backend_graph.py  test_frontend_app.py  test_ml_models.py  test_pipeline.py  test_risk_analysis.py  test_smart_cache.py
rohith/tests/orchestration/: __init__.py  test_supervisor_graph.py
(+324 files in other folders)
