[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-salesforce"
version = "0.2.2"
description = "An integration package connecting Salesforce and LangChain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "Cole McIntosh", email = "colemcintosh6@gmail.com" }
]
keywords = ["langchain", "salesforce", "crm", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-core>=0.3.15",
    "simple-salesforce>=1.12.6",
]

[project.urls]
Repository = "https://github.com/colesmcintosh/langchain-salesforce"
"Source Code" = "https://github.com/colesmcintosh/langchain-salesforce"
"Release Notes" = "https://github.com/colesmcintosh/langchain-salesforce/releases"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=6.0.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-socket>=0.7.0",
    "pytest-watcher>=0.3.4",
    "langchain-tests>=0.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.6",
]
lint = [
    "ruff>=0.5",
]
typing = [
    "mypy>=1.10",
    "types-requests>=2.32.0.20241016",
    "types-python-dateutil>=2.9.0.20241206",
]
codespell = [
    "codespell>=2.2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_salesforce"]

[tool.mypy]
disallow_untyped_defs = "True"

[[tool.mypy.overrides]]
module = ["pytest", "langchain_tests.*"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
    "integration: mark tests that require integration with external services",
    "unit: mark unit tests that don't require external services",
]
asyncio_mode = "auto"

[tool.codespell]
skip = "uv.lock,*.lock,*.json,.git,.mypy_cache,.venv,__pycache__"
ignore-words-list = "astroid,inital,thead,createable"
